--- a/package.json
+++ b/package.json
@@ -4,31 +4,25 @@
   "description": "Node.js sample app for OpenShift 3",
   "main": "server.js",
   "dependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^2.0.1",
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
-    "mocha": "^2.4.5",
-    "mongodb": "^2.1.16",
-    "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "express": "~3.4.4",
+    "morgan": "~1.0.0",
+    "mongoose": "~3.6.13",
+    "body-parser": "~1.0.1",
+    "cors": "~2.2.0"
   },
   "engine": {
     "node": "*",
     "npm": "*"
   },
-  "scripts": {
-    "start": "node server.js",
-    "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
-  },
   "repository": {
     "type": "git",
     "url": "http://github.com/ygyjack/testapi.git"
   },
-  "author": "Jack Y <jackyu@gmail.com>",
-  "license": "CC-BY-1.0",
-  "bugs": {
-    "url": "http://github.com/ygyjack/testapi/issues"
+  "author": {
+    "name": "jackyu",
+    "email": "jackyu@gmail.com",
+    "url": "http://github.com/ygyjack/testapi"
   },
+  "license": "CC-BY-1.0",
   "homepage": "http://github.com/ygyjack/testapi"
 }
