--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testapi",
+  "name": "my-test-api-project",
   "version": "0.0.1",
   "description": "Node.js sample app for OpenShift 3",
   "main": "server.js",
