--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "my-test-api-project",
+  "name": "football",
   "version": "0.0.1",
-  "description": "Node.js sample app for OpenShift 3",
+  "description": "Node.js Sample Porject",
   "main": "server.js",
   "dependencies": {
-    "express": "~3.4.4",
-    "morgan": "~1.0.0",
-    "mongoose": "~3.6.13",
     "body-parser": "~1.0.1",
-    "cors": "~2.2.0"
+    "cors": "~2.2.0",
+    "express": "~3.4.4",
+    "mongoose": "~3.6.13",
+    "morgan": "~1.0.0",
+    "request": "^2.83.0",
+    "twitter": "^1.7.1"
   },
   "engine": {
     "node": "*",
@@ -16,13 +18,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/ygyjack/testapi.git"
+    "url": "git+ssh://git@github.com/ygyjack/football.git"
   },
-  "author": {
-    "name": "jackyu",
-    "email": "jackyu@gmail.com",
-    "url": "http://github.com/ygyjack/testapi"
-  },
+  "author": "jackyu <jackyu@gmail.com> (http://github.com/ygyjack/football)",
   "license": "CC-BY-1.0",
-  "homepage": "http://github.com/ygyjack/testapi"
+  "homepage": "http://github.com/ygyjack/football",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "bugs": {
+    "url": "https://github.com/ygyjack/football/issues"
+  },
+  "devDependencies": {}
 }
